--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,16 @@
 {
-  "name": "foundation-libsass-template",
+  "name": "mtlv2",
   "dependencies": {
-    "foundation": "zurb/bower-foundation"
+    "foundation": "zurb/bower-foundation",
+    "angular-route": "~1.2.16",
+    "angular-ui": "~0.4.0",
+    "angular-cookie": "~4.x",
+    "angular-resource": "~1.2.16",
+    "angular": "~1.2.16",
+    "angular-animate": "~1.2.16",
+    "modernizr": "~2.8.2"
+  },
+  "resolutions": {
+    "angular": "~1.2.16"
   }
 }
