--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,8 @@
     "angular-resource": "~1.2.16",
     "angular": "~1.2.16",
     "angular-animate": "~1.2.16",
-    "modernizr": "~2.8.2"
+    "modernizr": "~2.8.2",
+    "userapp-angular": "~2.0.3"
   },
   "resolutions": {
     "angular": "~1.2.16"
