--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "test": "test"
   },
   "dependencies": {
-    "bower":"1.x",
+    "bower": "1.x",
     "express": "~4.3.1",
     "body-parser": "~1.2.2",
-    "twit": "~1.1.15"
+    "twit": "~1.1.15",
+    "passport": "~0.2.0",
+    "passport-userapp": "~1.1.2"
   },
   "repository": {
     "type": "git",
