--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "twit": "~1.1.15",
     "passport": "~0.2.0",
     "passport-userapp": "~1.1.2",
-    "path": "~0.4.9"
+    "path": "~0.4.9",
+    "jade": "~1.3.1"
   },
   "repository": {
     "type": "git",
