--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,7 @@
     "foundation": "zurb/bower-foundation",
     "angular-route": "~1.2.16",
     "angular-ui": "~0.4.0",
-    "angular-cookie": "~4.x",
+    "angular-cookies": "~1.2.16",
     "angular-resource": "~1.2.16",
     "angular": "~1.2.16",
     "angular-animate": "~1.2.16",
