--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "passport": "~0.2.0",
     "passport-userapp": "~1.1.2",
     "path": "~0.4.9",
-    "jade": "~1.3.1"
+    "jade": "~1.3.1",
+    "cookie-parser": "~1.1.0",
+    "underscore": "~1.6.0"
   },
   "repository": {
     "type": "git",
