--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,8 @@
     "angular": "~1.2.16",
     "angular-animate": "~1.2.16",
     "modernizr": "~2.8.2",
-    "userapp-angular": "~2.0.3"
+    "userapp-angular": "~2.0.3",
+    "angular-qrcode": "~3.1.0"
   },
   "resolutions": {
     "angular": "~1.2.16"
