--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "path": "~0.4.9",
     "jade": "~1.3.1",
     "cookie-parser": "~1.1.0",
-    "underscore": "~1.6.0"
+    "underscore": "~1.6.0",
+    "instagram-node": "~0.4.0"
   },
   "repository": {
     "type": "git",
